--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
                 </div>
             </div>
         </nav>
+        <div class="middle-header">
+            <h2>Группа компаний <br> Гремячинский ДОК</h2>
+            <p>Современное предприятие по производству гнуто-клееных изделий (латофлекс), фанеры, топливных брикетов
+                RUF, березового угля, пиломатериалов
+            </p>
+            <div class="but-img">
+            <button>Связаться с нами</button>
+            <img  src="./img.png/WhatsApp_white.png" alt="">
+            </div>
+        </div>
     </header>
 </body>
 
