--- a/index.html
+++ b/index.html
@@ -44,11 +44,87 @@
                 RUF, березового угля, пиломатериалов
             </p>
             <div class="but-img">
-            <button>Связаться с нами</button>
-            <img  src="./img.png/WhatsApp_white.png" alt="">
+                <button>Связаться с нами</button>
+                <img src="./img.png/WhatsApp_white.png" alt="">
             </div>
         </div>
     </header>
+
+    <section>
+        <h2>Продукция завода</h2>
+        <p>Ниже представлен список нашей продукции. Получить дополнительную информацию, а также оставить заявку можно по
+            контактам коммерческой службы.
+        </p>
+        <div class="arrows hidden-in-laptop">
+            <img src="./img.png/left arrow.svg" alt="">
+            <img src="./img.png/right arrow.svg" alt="">
+        </div>
+        .
+        <article>
+            <div class="box">
+                <img src="./img.png/unsplash_Xp9hn1HzzDk.png" alt="">
+                <h3>Латофлекс</h3>
+                <p>Шпон березовый лущеный, ГОСТ 99-96В
+                    Смола марки КФМТ - 15, класс эмиссии Е0
+                </p>
+                <button>Подробнее о товаре</button>
+            </div>
+            <div class="box">
+                <img src="./img.png/unsplash_Xp9hn1HzzDk (1).png" alt="">
+                <h3>Фанера</h3>
+                <p>Шпон березовый лущеный, ГОСТ 99-96В
+                    Смола марки КФМТ - 15, класс эмиссии Е0
+                </p>
+                <button>Подробнее о товаре</button>
+            </div>
+            <div class="box">
+                <img src="./img.png/unsplash_Xp9hn1HzzDk (2).png" alt="">
+                <h3>Брикеты топливные RUF</h3>
+                <p>Прессованные березовые опилки
+                    без применения химических добавок
+                </p>
+                <button>Подробнее о товаре</button>
+            </div>
+            <div class="box">
+                <img src="./img.png/unsplash_Xp9hn1HzzDk (3).png" alt="">
+                <h3>Пиломатериалы</h3>
+                <p>Дисковый распил - ель сибирская, пихта, сосна, берёза, липа, осина
+                </p>
+                <button>Подробнее о товаре</button>
+            </div>
+            <div class="box">
+                <img src="./img.png/unsplash_Xp9hn1HzzDk (4).png" alt="">
+                <h3>Кроватные основания</h3>
+                <p>Из берёзового шпона или из массива на ленте
+                </p>
+                <button>Подробнее о товаре</button>
+            </div>
+            <div class="box">
+                <img src="./img.png/unsplash_Xp9hn1HzzDk (5).png" alt="">
+                <h3>Уголь</h3>
+                <p>Микропористый высокоуглеродистый продукт
+                </p>
+                <button>Подробнее о товаре</button>
+            </div>
+
+                <div class="box">
+                    <img src="./img.png/unsplash_Xp9hn1HzzDk (6).png" alt="">
+                    <h3>Саженцы</h3>
+                    <p>Молодые деревья выращенные
+                        в питомнике
+                    </p>
+                    <button>Подробнее о товаре</button>
+                </div>
+                <div class="box">
+                    <img src="./img.png/unsplash_Xp9hn1HzzDk (7).png" alt="">
+                    <h3>Отходы производства</h3>
+                    <p>Прессованные березовые опилки
+                        без применения химических добавок
+                    </p>
+                    <button>Подробнее о товаре</button>
+                </div>
+        </article>
+    </section>
 </body>
 
 </html>
