--- a/index.html
+++ b/index.html
@@ -107,24 +107,61 @@
                 <button>Подробнее о товаре</button>
             </div>
 
-                <div class="box">
-                    <img src="./img.png/unsplash_Xp9hn1HzzDk (6).png" alt="">
-                    <h3>Саженцы</h3>
-                    <p>Молодые деревья выращенные
-                        в питомнике
-                    </p>
-                    <button>Подробнее о товаре</button>
-                </div>
-                <div class="box">
-                    <img src="./img.png/unsplash_Xp9hn1HzzDk (7).png" alt="">
-                    <h3>Отходы производства</h3>
-                    <p>Прессованные березовые опилки
-                        без применения химических добавок
-                    </p>
-                    <button>Подробнее о товаре</button>
-                </div>
+            <div class="box">
+                <img src="./img.png/unsplash_Xp9hn1HzzDk (6).png" alt="">
+                <h3>Саженцы</h3>
+                <p>Молодые деревья выращенные
+                    в питомнике
+                </p>
+                <button>Подробнее о товаре</button>
+            </div>
+            <div class="box">
+                <img src="./img.png/unsplash_Xp9hn1HzzDk (7).png" alt="">
+                <h3>Отходы производства</h3>
+                <p>Прессованные березовые опилки
+                    без применения химических добавок
+                </p>
+                <button>Подробнее о товаре</button>
+            </div>
         </article>
     </section>
+
+    <h2 class="hh2">основная деятельность</h2>
+
+    <div class="text-img">
+        <div class="left-text">
+            <h3 class="hidden-in-phone">Производство</h3>
+            <p class="hidden-in-phone">Оборудование предприятия поставляется
+                от мировых лидеров в сфере деревообработки
+                и обеспечивает стабильный выпуск продукции.
+            </p>
+            <p class="hidden-in-phone">
+                Поставки осуществляются по России и в 14 стран мира. Строгий контроль на каждом этапе производства
+                помогает поддерживать качество продукции.
+            </p>
+            <button class="hidden-in-laptop">Наше производство</button>
+        </div>
+        <div class="right-img">
+            <img src="./img.png/unsplash_zbD8iz5ZJk4(1).jpg" alt="">
+        </div>
+
+    </div>
+
+    <div class="three-img">
+        <img class="hidden-in-phone" src="./img.png/unsplash_2yNMsw-A2eI.jpg" alt="">
+        <img class="hidden-in-phone" src="./img.png/unsplash_2yNMsw-A2eI (1).jpg" alt="">
+        <img src="./img.png/unsplash_2yNMsw-A2eI (2).jpg" alt="">
+    </div>
+
+    <div class="hidden-in-laptop pp">
+        <h3>Оборудование</h3>
+    <p>
+        Оборудование предприятия поставляется
+        от мировых лидеров в сфере деревообработки и обеспечивает стабильный выпуск продукции. Поставки осуществляются
+        по России и в 14 стран мира. Строгий контроль на каждом этапе производства помогает поддерживать качество
+        продукции.
+        </p>
+    </div>
 </body>
 
 </html>
