--- a/index.html
+++ b/index.html
@@ -162,6 +162,26 @@
         продукции.
         </p>
     </div>
+
+    <div class="text-img hidden-in-phone">
+        <div class="left-text">
+            <h3>Лесоуправление и заготовка</h3>
+            <p>Рубка леса осуществляется на арендованных участках, обеспечивая бесперебойную поставку сырья для
+                производства и для продажи. Расчетная лесосека – 320 000 м3. Общая площадь арендованного леса – 306 000
+                Га - cертифицирована по стандартам международной добровольной лесной сертификации (FSC).
+            </p>
+        </div>
+        <div class="right-img">
+            <img src="./img.png/unsplash_zbD8iz5ZJk4.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="three-img hidden-in-phone">
+        <img src="./img.png/unsplash_2yNMsw-A2eI (3).jpg" alt="">
+        <img src="./img.png/unsplash_2yNMsw-A2eI (3).jpg" alt="">
+        <img src="./img.png/unsplash_2yNMsw-A2eI (3).jpg" alt="">
+    </div>
+
 </body>
 
 </html>
