--- a/index.html
+++ b/index.html
@@ -182,6 +182,30 @@
         <img src="./img.png/unsplash_2yNMsw-A2eI (3).jpg" alt="">
     </div>
 
+
+    <div class="text-img hidden-in-phone">
+        <div class="left-text">
+            <h3>Питомник</h3>
+            <p>Оборудование предприятия поставляется
+                от мировых лидеров в сфере деревообработки
+                и обеспечивает стабильный выпуск продукции.
+            </p>
+            <p>
+                Поставки осуществляются по России и в 14 стран мира. Строгий контроль на каждом этапе производства
+                помогает поддерживать качество продукции.
+            </p>
+        </div>
+        <div class="right-img">
+            <img src="./img.png/unsplash_zbD8iz5ZJk4.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="three-img hidden-in-phone">
+        <img src="./img.png/unsplash_2yNMsw-A2eI.jpg" alt="">
+        <img src="./img.png/unsplash_2yNMsw-A2eI (1).jpg" alt="">
+        <img src="./img.png/unsplash_2yNMsw-A2eI (2).jpg" alt="">
+    </div>
+
 </body>
 
 </html>
