--- a/index.html
+++ b/index.html
@@ -155,11 +155,12 @@
 
     <div class="hidden-in-laptop pp">
         <h3>Оборудование</h3>
-    <p>
-        Оборудование предприятия поставляется
-        от мировых лидеров в сфере деревообработки и обеспечивает стабильный выпуск продукции. Поставки осуществляются
-        по России и в 14 стран мира. Строгий контроль на каждом этапе производства помогает поддерживать качество
-        продукции.
+        <p>
+            Оборудование предприятия поставляется
+            от мировых лидеров в сфере деревообработки и обеспечивает стабильный выпуск продукции. Поставки
+            осуществляются
+            по России и в 14 стран мира. Строгий контроль на каждом этапе производства помогает поддерживать качество
+            продукции.
         </p>
     </div>
 
@@ -204,6 +205,32 @@
         <img src="./img.png/unsplash_2yNMsw-A2eI.jpg" alt="">
         <img src="./img.png/unsplash_2yNMsw-A2eI (1).jpg" alt="">
         <img src="./img.png/unsplash_2yNMsw-A2eI (2).jpg" alt="">
+    </div>
+
+
+    <div class="width80">
+        <div class="building">
+            <div class="all">
+            <div class="left-buil">
+                <h2>Стабильные поставки за счет собственной лесозаготовки</h2>
+                <div class="photo-img">
+                    <img src="./img.png/Group 1501.svg" alt="">
+                    <p class="green-p">Смотреть видео о заводе</p>
+                </div>
+                <p class="par">Гибкий подход к условиям сотрудничества – скидки, различные формы оплаты, условия поставки.. </p>
+            </div>
+
+            <div class="right-buil">
+                <h4>Сертификат FSС	</h4>
+                <p>Сертифицированная продукция (FSC 100%) по системе Forest Stewardship Council®.</p>
+                <h4>Соответствие регламенту EUTR</h4>
+                <p>(European Union Timber Regulation) – предоставляем необходимый пакт документов. 
+                </p>
+                <h4>Сертификат CARB / CARB2	</h4>
+                <p style="padding-bottom: 50px;">Для поставок в США и другие страны, запрашивающие сертификацию на соответствие производства и продукции стандартам по выбросам формальдегида.</p>
+            </div>
+            </div>
+        </div>
     </div>
 
 </body>
