--- a/index.html
+++ b/index.html
@@ -211,28 +211,53 @@
     <div class="width80">
         <div class="building">
             <div class="all">
-            <div class="left-buil">
-                <h2>Стабильные поставки за счет собственной лесозаготовки</h2>
-                <div class="photo-img">
-                    <img src="./img.png/Group 1501.svg" alt="">
-                    <p class="green-p">Смотреть видео о заводе</p>
+                <div class="left-buil">
+                    <h2>Стабильные поставки за счет собственной лесозаготовки</h2>
+                    <div class="photo-img">
+                        <img src="./img.png/Group 1501.svg" alt="">
+                        <p class="green-p">Смотреть видео о заводе</p>
+                    </div>
+                    <p class="par">Гибкий подход к условиям сотрудничества – скидки, различные формы оплаты, условия
+                        поставки.. </p>
                 </div>
-                <p class="par">Гибкий подход к условиям сотрудничества – скидки, различные формы оплаты, условия поставки.. </p>
-            </div>
 
-            <div class="right-buil">
-                <h4>Сертификат FSС	</h4>
-                <p>Сертифицированная продукция (FSC 100%) по системе Forest Stewardship Council®.</p>
-                <h4>Соответствие регламенту EUTR</h4>
-                <p>(European Union Timber Regulation) – предоставляем необходимый пакт документов. 
-                </p>
-                <h4>Сертификат CARB / CARB2	</h4>
-                <p style="padding-bottom: 50px;">Для поставок в США и другие страны, запрашивающие сертификацию на соответствие производства и продукции стандартам по выбросам формальдегида.</p>
-            </div>
+                <div class="right-buil">
+                    <h4>Сертификат FSС </h4>
+                    <p>Сертифицированная продукция (FSC 100%) по системе Forest Stewardship Council®.</p>
+                    <h4>Соответствие регламенту EUTR</h4>
+                    <p>(European Union Timber Regulation) – предоставляем необходимый пакт документов.
+                    </p>
+                    <h4>Сертификат CARB / CARB2 </h4>
+                    <p style="padding-bottom: 50px;">Для поставок в США и другие страны, запрашивающие сертификацию на
+                        соответствие производства и продукции стандартам по выбросам формальдегида.</p>
+                </div>
             </div>
         </div>
     </div>
 
+    <div class="up-map">
+        <h3>География Поставок</h3>
+        <div>
+            <div class="cars">
+                <span>Доставляем грузы по всему</span>
+                <img src="./img.png/Line 67.png" alt="">
+                <img src="./img.png/Group.png" alt="">
+            </div>
+            <div class="cars">
+                <span> миру в Европу  Азию, Америку, </span>
+                <img src="./img.png/Line 67.png" alt="">
+                <img src="./img.png/Group (1).png" alt="">
+            </div>
+            <div class="cars">
+                <span>Египет</span>
+                <img src="./img.png/Line 67.png" alt="">
+                <img src="./img.png/Group (2).png" alt="">
+            </div>
+    </div>
+    </div>
+    <div class="map">
+<img src="./img.png/Group 1536.png" alt="">
+    </div>
 </body>
 
 </html>
