--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
     <div class="map">
 <img src="./img.png/Group 1536.png" alt="">
     </div>
+
+    <div class="back-img hidden-in-phone">
+        <h2 style="font-size: 44px; text-align: center; padding-top: 80px; color: white;">Сотрудничество</h2>
+        <p style="text-align: center;color: rgba(255, 255, 255, 1); margin-top: 30px;">Предприятие постоянно потребляет различный <br> ассортимент продуктов и услуг</p>
+        <button style="border: none; padding:15px 30px; background-color: rgba(14, 158, 47, 1); margin-left: 670px; margin-top: 50px;color: white;">Подробнее</button>
+    </div>
 </body>
 
 </html>
