--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <img src="./img.png/Group.png" alt="">
             </div>
             <div class="cars">
-                <span> миру в Европу  Азию, Америку, </span>
+                <span> миру в Европу Азию, Америку, </span>
                 <img src="./img.png/Line 67.png" alt="">
                 <img src="./img.png/Group (1).png" alt="">
             </div>
@@ -253,16 +253,76 @@
                 <img src="./img.png/Line 67.png" alt="">
                 <img src="./img.png/Group (2).png" alt="">
             </div>
-    </div>
+        </div>
     </div>
     <div class="map">
-<img src="./img.png/Group 1536.png" alt="">
+        <img src="./img.png/Group 1536.png" alt="">
     </div>
 
     <div class="back-img hidden-in-phone">
         <h2 style="font-size: 44px; text-align: center; padding-top: 80px; color: white;">Сотрудничество</h2>
-        <p style="text-align: center;color: rgba(255, 255, 255, 1); margin-top: 30px;">Предприятие постоянно потребляет различный <br> ассортимент продуктов и услуг</p>
-        <button style="border: none; padding:15px 30px; background-color: rgba(14, 158, 47, 1); margin-left: 670px; margin-top: 50px;color: white;">Подробнее</button>
+        <p style="text-align: center;color: rgba(255, 255, 255, 1); margin-top: 30px;">Предприятие постоянно потребляет
+            различный <br> ассортимент продуктов и услуг</p>
+        <button
+            style="border: none; padding:15px 30px; background-color: rgba(14, 158, 47, 1); margin-left: 670px; margin-top: 50px;color: white;">Подробнее</button>
+    </div>
+
+    <div class="p-img">
+        <h3>Актуальные Вакансии</h3>
+        <img class="hidden-in-phone" src="./img.png/Group 1438.png" alt="">
+        <img class="hidden-in-laptop koop" src="./img.png/Group (3).png" alt="">
+    </div>
+    <p class="line"></p>
+
+    <div class="four-div">
+        <div class="divv">
+            <h4>Водитель лесовоза</h4>
+            <p class="line2"></p>
+            <h5>З.п. от 50 000 ₽ </h5>
+            <p>Оборудование предприятия поставляется от мировых лидеров в сфере деревообработки и обеспечивает
+                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира. 
+            </p>
+            <div class="buttt">
+            <button>Подробнее</button>
+            <img src="./img.png/Group 1492.svg" alt="">
+            </div>
+        </div>
+        <div class="divv">
+            <h4>Водитель лесовоза</h4>
+            <p class="line2"></p>
+            <h5>З.п. от 50 000 ₽ </h5>
+            <p>Оборудование предприятия поставляется от мировых лидеров в сфере деревообработки и обеспечивает
+                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира. 
+            </p>
+            <div class="buttt">
+            <button>Подробнее</button>
+            <img src="./img.png/Group 1492.svg" alt="">
+            </div>
+        </div>
+        <div class="divv">
+            <h4>Водитель лесовоза</h4>
+            <p class="line2"></p>
+            <h5>З.п. от 50 000 ₽ </h5>
+            <p>Оборудование предприятия поставляется от мировых лидеров в сфере деревообработки и обеспечивает
+                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира. 
+            </p>
+            <div class="buttt">
+            <button>Подробнее</button>
+            <img src="./img.png/Group 1492.svg" alt="">
+            </div>
+        </div>
+        <div class="divv">
+            <h4>Водитель лесовоза</h4>
+            <p class="line2"></p>
+            <h5>З.п. от 50 000 ₽ </h5>
+            <p>Оборудование предприятия поставляется от мировых лидеров в сфере деревообработки и обеспечивает
+                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира. 
+            </p>
+            <div class="buttt">
+            <button>Подробнее</button>
+            <img src="./img.png/Group 1492.svg" alt="">
+            </div>
+        </div>
     </div>
 </body>
 
