--- a/index.html
+++ b/index.html
@@ -324,6 +324,11 @@
             </div>
         </div>
     </div>
+
+    <div class="back-img2 hidden-in-laptop">
+        <h3>Новости</h3>
+        <button>Читать все новости</button>
+    </div>
 </body>
 
 </html>
