--- a/index.html
+++ b/index.html
@@ -280,11 +280,11 @@
             <p class="line2"></p>
             <h5>З.п. от 50 000 ₽ </h5>
             <p>Оборудование предприятия поставляется от мировых лидеров в сфере деревообработки и обеспечивает
-                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира. 
+                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира.
             </p>
             <div class="buttt">
-            <button>Подробнее</button>
-            <img src="./img.png/Group 1492.svg" alt="">
+                <button>Подробнее</button>
+                <img src="./img.png/Group 1492.svg" alt="">
             </div>
         </div>
         <div class="divv">
@@ -292,11 +292,11 @@
             <p class="line2"></p>
             <h5>З.п. от 50 000 ₽ </h5>
             <p>Оборудование предприятия поставляется от мировых лидеров в сфере деревообработки и обеспечивает
-                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира. 
+                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира.
             </p>
             <div class="buttt">
-            <button>Подробнее</button>
-            <img src="./img.png/Group 1492.svg" alt="">
+                <button>Подробнее</button>
+                <img src="./img.png/Group 1492.svg" alt="">
             </div>
         </div>
         <div class="divv">
@@ -304,11 +304,11 @@
             <p class="line2"></p>
             <h5>З.п. от 50 000 ₽ </h5>
             <p>Оборудование предприятия поставляется от мировых лидеров в сфере деревообработки и обеспечивает
-                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира. 
+                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира.
             </p>
             <div class="buttt">
-            <button>Подробнее</button>
-            <img src="./img.png/Group 1492.svg" alt="">
+                <button>Подробнее</button>
+                <img src="./img.png/Group 1492.svg" alt="">
             </div>
         </div>
         <div class="divv">
@@ -316,11 +316,11 @@
             <p class="line2"></p>
             <h5>З.п. от 50 000 ₽ </h5>
             <p>Оборудование предприятия поставляется от мировых лидеров в сфере деревообработки и обеспечивает
-                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира. 
+                стабильный выпуск продукции, которая поставляется в 8 регионов России и 14 стран мира.
             </p>
             <div class="buttt">
-            <button>Подробнее</button>
-            <img src="./img.png/Group 1492.svg" alt="">
+                <button>Подробнее</button>
+                <img src="./img.png/Group 1492.svg" alt="">
             </div>
         </div>
     </div>
@@ -328,6 +328,40 @@
     <div class="back-img2 hidden-in-laptop">
         <h3>Новости</h3>
         <button>Читать все новости</button>
+    </div>
+
+    <div class="box1">
+        <h2>Новости</h2>
+        <div class="box2">
+            <img src="./img.png/Group 1489.png" alt="">
+            <p>Читать все новости</p>
+        </div>
+    </div>
+    <div class="three-img2">
+        <div class="img1">
+            <img src="./img.png/unsplash_6tAIO3pxde4.jpg" alt="">
+            <h3>Вышли на международный рынок</h3>
+            <p>Оборудование предприятия поставляется
+                от мировых лидеров в сфере деревообработки и обеспечивает стабильный выпуск продукции
+            </p>
+            <p style="margin-top: 10px; color: rgba(14, 158, 47, 1);">25.12.2021</p>
+        </div>
+        <div class="img1">
+            <img src="./img.png/unsplash_okI5SSlYAvM.jpg" alt="">
+            <h3>Встреча с европепйскими коллегами</h3>
+            <p>Оборудование предприятия поставляется
+                от мировых лидеров в сфере деревообработки и обеспечивает стабильный выпуск продукции
+            </p>
+            <p style="margin-top: 10px; color: rgba(14, 158, 47, 1);">25.12.2021</p>
+        </div>
+        <div class="img1">
+            <img src="./img.png/unsplash_8KfCR12oeUM.jpg" alt="">
+            <h3>Новое оборудование</h3>
+            <p>Оборудование предприятия поставляется
+                от мировых лидеров в сфере деревообработки и обеспечивает стабильный выпуск продукции
+            </p>
+            <p style="margin-top: 10px; color: rgba(14, 158, 47, 1);">25.12.2021</p>
+        </div>
     </div>
 </body>
 
