--- a/index.html
+++ b/index.html
@@ -363,6 +363,38 @@
             <p style="margin-top: 10px; color: rgba(14, 158, 47, 1);">25.12.2021</p>
         </div>
     </div>
+
+    <div class="back-img3">
+        <div class="all2">
+            <div class="last-left">
+                <h2>Свяжитесь с нашим специалистом</h2>
+                <p>Заинтерисованы в сотрудничестве или остались вопросы? Заполните форму обратной связи и наши менеджеры
+                    обязательно свяжутся с вами</p>
+                <div class="all3">
+                    <div class="last2">
+                        <img src="./img.png/Vector 3.png" alt="">
+                        <p>Ответим втечение
+                            15 минут, в рабочее
+                            время</p>
+                    </div>
+                    <div class="last3 last2">
+                        <img src="./img.png/Vector 3.png" alt="">
+                        <p>Бережем ваши персональные данные</p>
+                    </div>
+                </div>
+            </div>
+            <div class="last-right">
+                <label class="l1" for="">Контактное лицо</label>
+                <input class="in1" type="text" placeholder="Ф.И.О.">
+                <div class="two-in">
+                    <label class="l1" for="">Телефон</label>
+                    <input type="tel" placeholder="+ 7 999 199 19 19">
+                    <label class="l1" for="">Email</label>
+                    <input type="email">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
